Use Map.of to simplify TestHTTPConfigSourceProvider