@@ -2,7 +2,6 @@ package io.quarkus.test.common.http;
 
 import java.io.Serializable;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
@@ -20,16 +19,10 @@ public class TestHTTPConfigSourceProvider implements ConfigSourceProvider {
     static final String TEST_URL_SSL_VALUE = "https://${quarkus.http.host:localhost}:${quarkus.http.test-ssl-port:8444}${quarkus.http.root-path:${quarkus.servlet.context-path:}}";
     static final String TEST_URL_SSL_KEY = "test.url.ssl";
 
-    static final Map<String, String> entries;
-
-    static {
-        Map<String, String> map = new HashMap<>();
-        map.put(TEST_URL_KEY, sanitizeURL(TEST_URL_VALUE));
-        map.put(TEST_URL_SSL_KEY, sanitizeURL(TEST_URL_SSL_VALUE));
-        map.put("%dev." + TEST_URL_KEY, sanitizeURL(
-                "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8080}${quarkus.http.root-path:${quarkus.servlet.context-path:}}"));
-        entries = Collections.unmodifiableMap(map);
-    }
+    static final Map<String, String> entries = Map.of(TEST_URL_KEY, sanitizeURL(TEST_URL_VALUE),
+            TEST_URL_SSL_KEY, sanitizeURL(TEST_URL_SSL_VALUE),
+            "%dev." + TEST_URL_KEY, sanitizeURL(
+                    "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8080}${quarkus.http.root-path:${quarkus.servlet.context-path:}}"));
 
     private static String sanitizeURL(String url) {
         return url.replace("0.0.0.0", "localhost");
